Fix: Menu items not accessible on overflow

--- a/main/app/Modules/AppUser/Resources/sass/app.scss
+++ b/main/app/Modules/AppUser/Resources/sass/app.scss
@@ -95,6 +95,10 @@ dl.phpdebugbar-widgets-kvlist dt {
 	width: calc(40% - 36px);
 }
 
+.yaybar.rui-yaybar.yay-overlay {
+	overflow-x: auto;
+}
+
 // * {
 //     user-select: none !important;
 // }
